--- a/src/app/dashboard/add-member/add-member.component.html
+++ b/src/app/dashboard/add-member/add-member.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h2 class="text-center my-3">Edit Employees Details</h2>
+    <h2 class="text-center my-3">Add Employees</h2>
     <form [formGroup]="addForm" (ngSubmit)="addEmployee()">
       <div class="row">
         <div class="form-group col-md-4">
