--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -13,8 +13,8 @@
       <div class="img text-center d-flex justify-content-center align-items-center">
         <i class="fa-regular fa-user"></i>
       </div>
-      <div class="value align-items-center">
-        <div><h5>{{totalEmployee.data.length}}</h5></div>
+      <div class="value align-items-center cursor" routerLink="../dashboard/emp-list">
+        <div><h5>{{totalEmployee}}</h5></div>
         <div><p>Total Employees</p></div>
       </div>
     </div>
@@ -25,7 +25,7 @@
       <div class="img text-center d-flex justify-content-center align-items-center">
         <i class="fa-solid fa-building"></i>
       </div>
-      <div class="value align-items-center">
+      <div class="value align-items-center cursor">
         <div><h5>{{role}}</h5></div>
         <div><p>Total Department</p></div>
       </div>
@@ -38,7 +38,7 @@
       <div class="img text-center d-flex justify-content-center align-items-center">
         <i class="fa-solid fa-person-walking-arrow-right"></i>
       </div>
-      <div class="value align-items-center">
+      <div class="value align-items-center cursor">
         <div><h5>6</h5></div>
         <div><p>Total Leave Request</p></div>
       </div>
@@ -51,7 +51,7 @@
       <div class="img text-center d-flex justify-content-center align-items-center">
         <i class="fa-solid fa-person-through-window"></i>
       </div>
-      <div class="value align-items-center">
+      <div class="value align-items-center cursor">
         <div><h5>3</h5></div>
         <div><p>On Leave Today</p></div>
       </div>
